Fix post/project views Previously weren't following typing sizes Fixed previous/next post cards on mobile Fixed TOC clipping under previous/next post cards on desktop

--- a/_sass/material/variables.scss
+++ b/_sass/material/variables.scss
@@ -89,21 +89,3 @@ $body-font: 400;
 // Shadow colours & sizes for elevation
 $shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.3);
 $shadow-1: 0px 4px 4px 2px rgba(0, 0, 0, 0.3);
-
-// Dynamic variables (can change on the fly depending on screen size, in case the screen is resized)
-:root {
-    // Margin/gap size
-    --margin: 0px;
-    // Column count in galleries
-    --columns: 0;
-    // Default titlebar font sizes
-    --titlebar-title-size: none;
-    --titlebar-subtitle-size: none;
-    // Default header font sizes
-    --header-1-size: none;
-    --header-2-size: none;
-    --header-1-weight: none;
-    --header-2-weight: none;
-    --body-size: none;
-    --body-weight: none;
-}
